--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,17 @@
 {
-  "rewrites": [{ "source": "/notes/:id", "destination": "/index.html" }]
-}
+    "rewrites": [
+      {
+        "source": "/notes/:id",
+        "destination": "/index.html"
+      },
+      {
+        "source": "/notes",
+        "destination": "/index.html"
+      },
+      {
+        "source": "/(.*)",
+        "destination": "/index.html"
+      }
+    ]
+  }
+  
